syntax = "proto3";

option go_package = "/proto";

service EmailDeliveryService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
  repeated string cc = 4;
  repeated string bcc = 5;
  bytes attachment = 6;
}

message SendEmailResponse {
  string status = 1;
}
